--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2485,6 +2485,39 @@ a {
 .cid-tg27YfLtBM H3 {
   color: #cb8aff;
 }
+.cid-tg3K9DywpQ {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-tg3K9DywpQ .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tg3K9DywpQ .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+@media (max-width: 991px) {
+  .cid-tg3K9DywpQ .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-tg3K9DywpQ img {
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-tg3K9DywpQ .text-wrapper {
+    padding: 2rem;
+  }
+}
+.cid-tg3K9DywpQ .mbr-section-title {
+  text-align: left;
+}
 .cid-tg2hhXtiJ9 {
   padding-top: 30px;
   padding-bottom: 45px;
