--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2501,7 +2501,7 @@ a {
   height: 100%;
   position: absolute;
   top: 0;
-  background-image: url("../../../assets/images/background13.jpg");
+  background-image: url("../../../assets/images/mbr-1920x1440.jpeg");
 }
 .cid-tg7voZ5lrS .row {
   align-items: stretch;
