--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2229,15 +2229,15 @@ a {
     padding: 2rem;
   }
 }
-.cid-tpR78nO4Tf {
+.cid-tpRf1Gu2NQ {
   padding-top: 4rem;
   padding-bottom: 4rem;
   background-color: #ffffff;
 }
-.cid-tpR78nO4Tf .mbr-fallback-image.disabled {
+.cid-tpRf1Gu2NQ .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-tpR78nO4Tf .mbr-fallback-image {
+.cid-tpRf1Gu2NQ .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -2246,30 +2246,30 @@ a {
   position: absolute;
   top: 0;
 }
-.cid-tpR78nO4Tf .card-box {
+.cid-tpRf1Gu2NQ .card-box {
   z-index: 10;
   position: relative;
 }
 @media (min-width: 1500px) {
-  .cid-tpR78nO4Tf .container {
+  .cid-tpRf1Gu2NQ .container {
     max-width: 1400px;
   }
 }
-.cid-tpR78nO4Tf .card {
+.cid-tpRf1Gu2NQ .card {
   margin: auto;
 }
-.cid-tpR78nO4Tf .mbr-iconfont {
+.cid-tpRf1Gu2NQ .mbr-iconfont {
   display: block;
   font-size: 5rem;
   color: #cb8aff;
   margin-bottom: 2rem;
 }
-.cid-tpR78nO4Tf .card-wrapper {
+.cid-tpRf1Gu2NQ .card-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.cid-tpR78nO4Tf .row {
+.cid-tpRf1Gu2NQ .row {
   justify-content: center;
 }
 .cid-tg27YfLtBM {
